--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@
 
 body {
   padding: 30px;
-  font-family: "ZCOOL QingKe HuangYou", cursive;
-  font-size: 18px;
+  font-family: "Rajdhani", sans-serif;
+  font-weight: 800;
+  font-size: 16px;
   background-color: black;
 }
