--- a/css/List.css
+++ b/css/List.css
@@ -1,5 +1,5 @@
 .list {
-  margin-left: 20px;
+  margin: 10px;
   padding: 0;
   min-width: 400px;
   /* border: 0.5px solid purple;
@@ -29,18 +29,11 @@
   opacity: 0.8;
 }
 
-.list input {
-  font-family: "Rajdhani", sans-serif;
-  font-size: 15px;
-  margin-bottom: 5px;
-  padding: 10px 10px;
-  border-radius: 5px;
-  background-color: gainsboro;
-  line-height: 1.6;
-}
-
-.list input:active {
-  border: 2px solid #b4c2fa;
+.list .empty {
+  color: #b4c2fa;
+  font-size: 16px;
+  margin: 10px;
+  opacity: 0.8;
 }
 .list li {
   margin: 1px;
