--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,29 @@
 }
 
 body {
-  padding: 30px;
+  padding: 15px;
   font-family: "Rajdhani", sans-serif;
   font-weight: 800;
   font-size: 16px;
   background-color: black;
+}
+
+.mapWrapper {
+  display: flex;
+  flex-direction: column;
+}
+input {
+  margin-top: 20px;
+  font-family: "Rajdhani", sans-serif;
+  font-size: 15px;
+  margin-bottom: 5px;
+  padding: 10px 10px;
+  border-radius: 5px;
+  background-color: gainsboro;
+  line-height: 1.6;
+}
+
+input:focus {
+  outline: none;
+  border: 4px solid #b4c2fa;
 }
